# moonlight-web-stream

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.wasm.toml  Cross.toml  README.md  buildAll.ps1  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  ubrn.config.yaml  webpack.config.js
.cargo/: config.toml
.github/workflows/: ci.yml  linux.yml  prepare-release.yml  windows.yml
Cross/: Dockerfile  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl
common/src/: api_bindings.rs  config.rs  ipc.rs  lib.rs
docker/: Dockerfile  Dockerfile.action  Dockerfile.prerelease  entrypoint.sh  moonlight-web.xml
moonlight-common/: Cargo.toml
moonlight-common/src/: lib.rs
moonlight-web/common/: Cargo.toml
moonlight-web/streamer/: Cargo.toml
moonlight-web/streamer/src/: main.rs
moonlight-web/streamer/src/transport/webrtc/: mod.rs  video.rs
moonlight-web/web-server/: Cargo.toml
src/: cli.rs  main.rs  web.rs
src/api/: admin.rs  app.rs  host.rs  mod.rs  role.rs  settings.rs  stream.rs  user.rs
src/app/: auth.rs  host.rs  mod.rs  password.rs  role.rs  user.rs
streamer/: Cargo.toml
streamer/src/: main.rs
web/: admin.html  admin.ts  api.ts  default_settings.ts  experimental_apis.d.ts  i18n.ts  iframe.ts  index.html  index.ts  screen_keyboard.ts  stream.html  stream.ts  util.ts
web/component/: context_menu.ts  input.ts  notification.ts  settings_menu.ts
web/libopus/: index.ts
web/locales/: en.ts  fr-FR.ts  (+5 more)
(+91 files in other folders)
