[package]
name = "streamer"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true, features = ["high", "stream"] }
common = { path = "../common" }

tokio = { workspace = true, features = ["rt-multi-thread"] }
webrtc = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

pem = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

rustls = { workspace = true, features = ["tls12", "std"] }
rustls-openssl = "0.3.0"

[lints]
workspace = true
